static/css/style.css
@charset "UTF-8";

@font-face {
    font-family: Libre Baskerville;
    font-weight: 300;
    src: url(./font/LibreBaskerville-Regular.otf);
}

@font-face {
    font-family: Libre Baskerville;
    font-style: italic;
    font-weight: 400;
    src: url(./font/LibreBaskerville-Italic.otf);
}

@font-face {
    font-family: Libre Baskerville;
    font-weight: bold;
    src: url(./font/LibreBaskerville-Bold.otf);
}

@font-face {
    font-family: Source Sans Pro;
    font-weight: 400;
    src: url(./font/SourceSansPro-Regular.otf);
}

@font-face {
    font-family: Source Sans Pro;
    font-weight: 300;
    src: url(./font/SourceSansPro-Light.otf);
}

@font-face {
    font-family: Source Sans Pro;
    font-style: italic;
    font-weight: 400;
    src: url(./font/SourceSansPro-It.otf);
}

@font-face {
    font-family: Source Sans Pro;
    font-weight: bold;
    src: url(./font/SourceSansPro-Bold.otf);
}

@font-face {
    font-family: Source Sans Pro;
    font-weight: bold;
    font-style: italic;
    src: url(./font/SourceSansPro-BoldIt.otf);
}
  
@media print {
    article {page-break-before: always;}
    section {page-break-before: always;}

}
  

@page {
  size: 13.33in 7.5in;
  margin-top: 1cm;
  /* margin-bottom: 5cm; */
  /* size: A4 landscape; */

  @bottom-left {
    content: string(heading);
    font-size: 14pt;
    height: 1cm;
    vertical-align: middle;
    width: 100%;
    text-transform: uppercase;
  }

  @bottom-right {
    background: #a51417;
    color: #ffffff;
    content: counter(page);
    height: 1cm;
    text-align: center;
    width: 1cm;
  }

  @bottom-center {
    background: #14213d;
    content: '';
    display: block;
    height: 0.05cm;
    opacity: 0.5;
    width: 100%;
  }
}

@page :first {
  background: url(./cover.png) no-repeat center;
  background-size: cover;
  margin: 0;
  padding: 0;
}

:root {
    --primary-color: #6c7373;
    --secondary-color: #a51417;
    --tertiary-color: #c8c8c8;
}

html {
    color: #393939;
    font-family: source sans pro, sans-serif;
    font-size: 11pt;
    font-weight: 300;
    line-height: 1.5;
}



html body h1,
html body h2,
html body h3,
html body h4 ,
html body h5, 
html body p {
  margin: 0;
}

html body h1 {
  color: white;
  font-size: 32pt;
  text-transform: uppercase;
  font-family: Libre Baskerville, sans-serif;
}

html body h2 {
  /* string-set: heading content(); */
  color: var(--secondary-color);
  font-size: 24pt;
  padding: 0;
  margin: 0;
  border-bottom: solid 2px #cbd5e0;
}

html body h3 {
  color: #3d3d3d;
  font-size: 22pt;
  padding: 0;
  margin: 0;
  /* border-bottom: solid 2px #cbd5e0; */
}

html body h4 {
  color: var(--primary-color);
  font-size: 22pt;
  padding: 0;
  margin-top: 20px;
  margin-bottom: 5px;
}

html body h5 {
  color: var(--primary-color);
  font-size: 18pt;
  padding: 0;
  margin-top: 20px;
  margin-bottom: 5px;
}

html body p {
  font-size: 20pt;
  font-family: Source Sans Pro, sans-serif;
  margin-top: 0px;
  /* padding-top: 0px; */
}

html body article {
  string-set: heading attr(id);
}

html body article#cover {
  display: flex;
  flex-direction: column;
  justify-content: flex-end;
  flex-wrap: wrap;
  /* height: 297mm; 
}

html body .section-banner-outer  {
  padding:0px;
}

.section-banner-outer { 
    width: 740px;
    background-color: var(--tertiary-color);
    margin-left:-25px;
    /* padding-left: 70px; */
    text-align: left;
    border-radius: 10px;
  }



#cover-logo {
    width: 50%;
    padding-bottom: 4cm;
} 

html body article#cover h1 {
  font-size:42px;
}



section {
  margin-bottom: 0cm;
  position:relative;
}

a {
  font-style: italic;
  font-size: 120%;
}

img {
  margin-top:20px;
  margin-bottom:10px;
  max-width: 90%;
  width:90%;
  /* padding:20px; */
  height: auto;
  display:block;
  margin-left: auto;
  margin-right:auto;
  border-radius: 10px;
}

table {
  border-collapse: collapse;
  max-width: 95%;
  overflow-wrap:break-word;
  margin-left:auto;
  margin-right:auto;
}

tr:nth-child(odd) {
  background-color: #f2f2f2;
}

th:nth-child(1) {
  width:8em;
}



thead th {
  text-align: left;
  background-color: white;
}


tbody th {
    text-align: center;
}

th {
    width: 10em;
    text-align: center;
    font-size:20px;
}

th, td {
    padding: 0.5 em 1 em;
}

td {
    text-align: center;
    font-size: 18px;
}

td:nth-child(1) {
  text-align: left;
}

html body article#cover section {
  text-align: right;
  padding: 2cm 0.5cm;
} 


main {
  flex: 1;
  display: flex; /* This line is crucial for side-by-side layout */
  padding-top: 10px;
  padding-left: 10px;
  padding-right:10px;
  padding-bottom: 10px;
  margin-top: 10px;
  margin-bottom: 10px;
  
  /* justify-content: center; */
  /* align-self: center; */
}

.column {
  flex: 1; /* This makes both columns share the space evenly */
  padding: 0px;
  margin-right: 30px;
  padding-left:10px;
}

#left-column {
  /* background-color: #ddd; */
  flex: 1; /* Represents a third of the space if right column is flex: 2 */
  padding-left:20px;
}

#right-column {
  /* background-color: #eee; */
  flex: 2; /* Represents two thirds of the space */
}

#wide-left-column {
  /* background-color: #ddd; */
  flex: 2; /* Represents a third of the space if right column is flex: 2 */
}

#narrow-right-column {
  /* background-color: #eee; */
  flex: 1; /* Represents two thirds of the space */
}


#credit-column {
  /* background-color: #ddd; */
  flex: 1; /* Represents a third of the space if right column is flex: 2 */
  flex-direction: column;
  /* height:500px; */
  /* border: 2px solid #000; */
  /* align-items: flex-end; */
}

#content-column {
  /* background-color: #eee; */
  flex: 3; /* Represents two thirds of the space */
}

ul {
  margin-left: 0px;
  padding-left: 20px;
  margin-top:5px;
}

ul > li {
  font-size: 18pt;
  margin-left:5px;
  padding:2px;
  font-weight: normal;
}

ol > li {
  font-size: 18pt;
  margin:0px;
  padding:2px;
}

dl {
  margin-left: 0px;
  padding-left: 10px;
  margin-top:5px;
}

dt {
  font-weight: bold;
  margin-top: 10px;
  font-size: 18pt;
  font-family: 'Source Sans Pro', sans-serif;
}

dd {
  margin-top: 0px;
  margin-bottom: 5px;
  margin-left: 5px;
  font-size: 18pt;
  font-family: 'Source Sans Pro', sans-serif;
}

footer {
  /* position: absolute; */
  /* bottom: 0; */
  /* left: 0; */
  width: 100%;
  /* background-color: #f3f3f3; */
  text-align: right;
  padding: 1em 0;
}

.reference {
  font-size: 14pt;
  text-align: right;
  /* padding: 1em 0; */
}

#headshot-image {
  
  width:150px;
  margin-left:0px;
  
}


.center {
  text-align: center;
}

